--- a/notes.tex
+++ b/notes.tex
@@ -685,6 +685,32 @@ Suppose $\{v_1, \dots, v_n\}$ is a basis for $V$. For $w_1, \dots, w_n \in W$ th
     \item Let $T : V \to W$ be $T(x) = \sum_{i = 1}^na_iw_i$.
 \end{itemize}
 
+\begin{sol}
+Let $\{v_1, \dots, v_n\}$ be a basis for $V$ and $w_1, \dots, w_n \in W$. Then there exists unique $T : V \to W$ defined by $T(v_i) = w_i$.
+
+\begin{itemize}
+    \item[(1)] Let $x \in V$. Then $x$ can be uniquely written as $x = \sum_{i = 1}^na_iv_i$ where $a_i \in \mathbb{F}$. Let $T(x) \coloneqq \sum_{i = 1}^na_iw_i.$ $T: V \to W$ is well-defined, and thus a function.
+    
+    \item[(2)] Let $T$ be linear and $u, v \in V$. Let $c \in \mathbb{F}$. We will show $T(cu + v) = cT(u) + T(v)$. Then, $u = \sum_{i = 1}^na_iv_i$ and $v = \sum_{i = 1}^nb_iv_i$ for unique $a_1, \dots, a_n, b_1, \dots, b_n \in \mathbb{F}$. Then $cu + v = \sum_{i = 1}^n(ca_i + b_i)v_i$. So, 
+    \begin{align*}
+        T(cu + v) &= \sum_{i = 1}^n(ca_i + b_i)w_i \\
+        &= c \sum_{i = 1}^na_iw_i + \sum_{i = 1}^nb_iw_i \\
+        &= cT(u) + T(v).
+    \end{align*}
+    
+    \item[(3)] Suppose $U : V \to W$ is linear and $U(v_i) = w_i$. Let $x \in V$. Then $x = \sum_{i = 1}^na_iv_i$. Then 
+    \begin{align*}
+        U(x) &= U\left(\sum_{i = 1}^na_iv_i\right) \\
+        &= \sum_{i = 1}^na_iU(v_i) \\
+        &= \sum_{i = 1}^na_iw_i \\
+        &= T(x).
+    \end{align*}
+    
+    \item[(4)] Note, $T(v_i) = w_i$ because $v_i = 1 \cdot v_i$. Thus, $T(v_i) = 1 \cdot w_i = w_i$.
+    
+\end{itemize}
+\end{sol}
+
 \begin{corollary}{7}
 Let $\{v_1, \dots, v_n\}$ be a basis of $V$. If $U,T : V \to W$ are linear and $T(v_i) = U(v_i)$, then $T = U$.
 \end{corollary}
@@ -694,6 +720,20 @@ Let $\{v_1, \dots, v_n\}$ be a basis of $V$. If $U,T : V \to W$ are linear and $
 \begin{definition}{3}
 Let $V$ be a finite-dimensional vector space. An \textit{ordered basis} for $V$ is a basis equipped with an ordering.
 \end{definition}
+
+\noindent\textbf{Example:} Let $\beta = \left\{e_1 = \begin{pmatrix}
+1 \\ 0 \\ 0
+\end{pmatrix}, e_2 = \begin{pmatrix}
+0 \\ 1 \\ 0
+\end{pmatrix}, e_3 = \begin{pmatrix}
+0 \\ 0 \\ 1
+\end{pmatrix} \right\}$. Let $x = \begin{pmatrix}
+5 \\ 6 \\ 7
+\end{pmatrix} = 5e_1 + 6e_2 + 7e_3$. Then $\begin{bmatrix}
+x
+\end{bmatrix}_\beta = \begin{pmatrix}
+5 \\ 6 \\ 7
+\end{pmatrix}$.
 
 \begin{definition}{4}
 Let $\beta = \{u_1, \dots, u_n\}$ be an ordered basis for $V$. Then for every $x \in V$, $x = \sum a_iu_i$ and $a_1,\dots, a_n$ are unique. The coordinate vector of $x$ relative to $\beta$, $\begin{bmatrix} x \end{bmatrix}_\beta = (a_1, \dots, a_n)^T$.
@@ -713,6 +753,16 @@ Let $\beta = \{u_1, \dots, u_n\}$ be an ordered basis for $V$. Then for every $x
     \item The $j$th column of $A$ is $\begin{bmatrix} T(v_j) \end{bmatrix}_\gamma$.
     \item If $T,U : V \to W$ and $\begin{bmatrix} U \end{bmatrix}_\beta^\gamma = \begin{bmatrix} T \end{bmatrix}_\beta^\gamma$, then $T = U$.
 \end{itemize}
+
+\noindent\textbf{Example:} Let $T : \mathbb{R}^2 \to \mathbb{R}^2$, $\beta = \{(1, 0), (0, 1)\}$ and $\gamma = \{(1,1),(1,-1)\}$. Let $T((1,0)) = (1,0)$ and $T((0,1)) = (1,1)$. Find $\begin{bmatrix}
+T
+\end{bmatrix}_\beta^\gamma$.
+
+We can see $T((1,0)) = (1,0) = \frac{1}{2}(1,1) + \frac{1}{2}(1,-1)$. Also, $T((0,1)) = (1,1) = 1(1,1) + 0(1,-1)$. Therefore, $\begin{bmatrix}
+T
+\end{bmatrix}_\beta^\gamma = \begin{pmatrix}
+\frac{1}{2} & 1 \\ \frac{1}{2} & 0
+\end{pmatrix}$.
 
 \begin{theorem}{2.7}
 Let $T,U : V \to W$ are linear and let $a \in F$. Then,
