--- a/notes.tex
+++ b/notes.tex
@@ -2,7 +2,7 @@
 %Do not alter this block of commands.  If you're proficient at LaTeX, you may include additional packages, create macros, etc. immediately below this block of commands, but make sure to NOT alter the header, margin, and comment settings here. 
 \documentclass[12pt]{article}
 \usepackage[margin=1in, bottom=4.5cm]{geometry}
-\usepackage{amsmath,amsthm,amssymb,amsfonts, enumitem, fancyhdr, color, comment, graphicx, environ, scrextend, mathtools, yfonts, pdfpages}
+\usepackage{amsmath,amsthm,amssymb,amsfonts, enumitem, fancyhdr, color, comment, graphicx, environ, scrextend, mathtools, yfonts, pdfpages, tikz-cd}
 \usepackage[table,dvipsnames]{xcolor}
 \usepackage{tikz}  
 \usepackage{tikz-3dplot} 
@@ -1123,8 +1123,40 @@ Let $V$, $W$ be finite-dimensional over $F$. Then $V$ is isomorphic to $W$ if an
 \end{sol}
 
 \begin{theorem}{2.20}
-Let $V$, $W$ be finite-dimensional over $F$ of dimensions $n$ and $m$. Let $\beta$, $\gamma$ be ordered bases for $V$ and $W$. Then $\phi : \mathcal{L}(V, W) \to M_{m \times n}(F)$ given by $\phi(T) = \begin{bmatrix} T \end{bmatrix}_\beta^\gamma$ for $T \in \mathcal{L}(V, W)$ is an isomorphism.
+Let $V$, $W$ be finite-dimensional over $F$ of dimensions $n$ and $m$. Let $\beta$, $\gamma$ be ordered bases for $V$ and $W$. Then $\Phi : \mathcal{L}(V, W) \to M_{m \times n}(F)$ given by $\Phi(T) = \begin{bmatrix} T \end{bmatrix}_\beta^\gamma$ for $T \in \mathcal{L}(V, W)$ is an isomorphism.
 \end{theorem}
+
+\begin{sol}
+Let $\Phi(T) = \begin{bmatrix}
+T
+\end{bmatrix}_\beta^\gamma$. 
+
+\begin{itemize}
+    \item[(1)] Let $\phi : \mathcal{L}(V,W) \to M_{m \times n}(\mathbb{F})$. Then $\Phi$ is linear. \begin{align*}
+        \Phi(aT + U) &= \begin{bmatrix}
+        aT + U
+        \end{bmatrix}_\beta^\gamma \\ &= \begin{bmatrix}
+        aT
+        \end{bmatrix}_\beta^\gamma + \begin{bmatrix}
+        U
+        \end{bmatrix}_\beta^\gamma \\
+        &= a\begin{bmatrix}
+        T
+        \end{bmatrix}_\beta^\gamma + \begin{bmatrix}
+        U
+        \end{bmatrix}_\beta^\gamma
+    \end{align*}
+    
+    \item[(2)] For every $A \in M_{m \times n}(\mathbb{F})$ there exists unique transformation $T$ such that $\Phi(T) = A = \begin{bmatrix}
+    A_{ij}
+    \end{bmatrix}$. Let $\beta = \{v_1, \dots, v_n\}$ and $\gamma = \{w_1, \dots, w_m\}$. Then there exists unique transformation $T : V \to W$ such that $$T(v_j) = \sum_{i = 1}^n A_{ij}w_i,$$ for $j = 1, \dots, n$ and $i = 1, \dots, m$. Thus $$\begin{bmatrix}
+        T
+        \end{bmatrix}_\beta^\gamma = A.$$
+    Thus $\Phi(T) = \begin{bmatrix}
+    T
+    \end{bmatrix}_\beta^\gamma = A$.
+\end{itemize}
+\end{sol}
 
 \begin{definition}{9}
 Let $\beta$ be an ordered basis for an $n$-dimensional vector space $V$ over $F$. The \textit{standard representation of $V$ with respect to $\beta$} is the function $\phi_\beta : V \to F^n$ defined as $\phi_\beta(x) = \begin{bmatrix} x \end{bmatrix}_\beta$.
@@ -1133,6 +1165,25 @@ Let $\beta$ be an ordered basis for an $n$-dimensional vector space $V$ over $F$
 \begin{theorem}{2.21}
 Let $V$ be a finite-dimensional vector space with ordered basis $\beta$. Then $\phi_\beta$ is an isomorphism.
 \end{theorem}
+
+\noindent\textbf{Note:}
+For vector fields $V$ and $W$ with basis $\beta$ and $\gamma$, respectively, we have the following schematic representation:
+\begin{center}
+\begin{tikzcd}  
+V \arrow[r,"T"] \arrow[d,"\phi_\beta", swap] & W \arrow[d,"\phi_\gamma"]\\
+\mathbb{F}^n \arrow[r,"L_A"] & \mathbb{F}^m
+\end{tikzcd} 
+\end{center}
+Where $L_A(x) = Ax$ and $A = \begin{bmatrix}
+T
+\end{bmatrix}_\beta^\gamma$, we have $$L_A\phi_\beta = \phi_\gamma T.$$
+That is, $$\begin{bmatrix}
+T
+\end{bmatrix}_\beta^\gamma \begin{bmatrix}
+u
+\end{bmatrix}_\beta = \begin{bmatrix}
+T(u)
+\end{bmatrix}_\gamma.$$
 
 \subsection{The change of coordinate matrix}
 
@@ -1146,15 +1197,177 @@ Let $\beta$, $\beta'$ be two ordered bases for a finite-dimensional vector space
 \end{itemize}
 \end{theorem}
 
+\begin{sol} \text{ }
+\begin{itemize}
+    \item[(a)] We know $\begin{bmatrix}
+    I_V
+    \end{bmatrix}_{\beta '}^\beta$ is invertible because $I_V : V \to V$ is invertible. So, $I_V^{-1} = I_V$.
+    
+    \item[(b)] We have $\begin{bmatrix}
+    u
+    \end{bmatrix}_\beta = Q \cdot \begin{bmatrix}
+    u
+    \end{bmatrix}_{\beta '}$. So, $\begin{bmatrix}
+    u
+    \end{bmatrix}_\beta = \begin{bmatrix}
+    I_V(u)
+    \end{bmatrix}_\beta = \begin{bmatrix}
+    I_V
+    \end{bmatrix}_{\beta '}^\beta\begin{bmatrix}
+    u
+    \end{bmatrix}_{\beta '}$.
+\end{itemize}
+\end{sol}
+
+\noindent\textbf{Example:} Let $\beta = \left\{\begin{pmatrix}
+1 \\ 1
+\end{pmatrix}, \begin{pmatrix}
+1 \\ -1
+\end{pmatrix}\right\}$ and $\beta ' = \left\{ \begin{pmatrix}
+2 \\ 4
+\end{pmatrix}, \begin{pmatrix}
+3 \\ 1
+\end{pmatrix}\right\}$. Then \begin{align*}
+    \begin{pmatrix}
+    2 \\ 4
+    \end{pmatrix} &= 3 \begin{pmatrix}
+    1 \\ 1
+    \end{pmatrix} - \begin{pmatrix}
+    1 \\ -1
+    \end{pmatrix}, \\
+    \begin{pmatrix}
+    3 \\ 1
+    \end{pmatrix} &= 2 \begin{pmatrix}
+    1 \\ 1
+    \end{pmatrix} + \begin{pmatrix}
+    1 \\ -1
+    \end{pmatrix}, \\
+    \begin{bmatrix}
+    I_V
+    \end{bmatrix}_{\beta '}^\beta &= \begin{pmatrix}
+    3 & 2 \\ -1 & 1
+    \end{pmatrix}, \\
+    \begin{bmatrix}
+    \begin{pmatrix}
+    2 \\ 4
+    \end{pmatrix}
+    \end{bmatrix}_\beta &= Q \begin{bmatrix}
+    \begin{pmatrix}
+    2 \\ 4
+    \end{pmatrix}
+    \end{bmatrix}_{\beta '} \\ 
+    &= Q \begin{pmatrix}
+    1 \\ 0
+    \end{pmatrix} \\
+    &= \begin{pmatrix}
+    3 \\ -1
+    \end{pmatrix}.
+\end{align*}
+
 \noindent $Q$ is called the change of coordinate matrix. A linear operator on $V$ is the linear transformation from $V$ to $V$.
 
 \begin{theorem}{2.23}
 Let $T$ be a linear operator on a finite-dimensional vector space $V$. Let $\beta, \beta'$ be ordered bases for $V$. Suppose $Q = \begin{bmatrix} I_V \end{bmatrix}_{\beta'}^\beta$. Then $$\begin{bmatrix} T \end{bmatrix}_{\beta'} = Q^{-1}\begin{bmatrix} T \end{bmatrix}_\beta Q.$$
 \end{theorem}
 
+\begin{sol}
+Suppose $Q = \begin{bmatrix} I_V \end{bmatrix}_{\beta '}^\beta$. Note that $I_VQ = Q = QI_V$. Then, \begin{align*}
+    Q\begin{bmatrix} T \end{bmatrix}_{\beta '} &= \begin{bmatrix} I_V \end{bmatrix}_{\beta '}^\beta\begin{bmatrix} T \end{bmatrix}_{\beta '} \\
+    &= \begin{bmatrix} I_VT \end{bmatrix}_{\beta '}^\beta \\
+    &= \begin{bmatrix} TI_V \end{bmatrix}_{\beta '}^\beta \\
+    &= \begin{bmatrix} T \end{bmatrix}_\beta \begin{bmatrix} I_V \end{bmatrix}_{\beta '}^\beta \\
+    &= \begin{bmatrix} T \end{bmatrix}_\beta \cdot Q.
+\end{align*} So, $Q^{-1}Q\begin{bmatrix} T \end{bmatrix}_{\beta '} = Q^{-1}\begin{bmatrix} T \end{bmatrix}_\beta Q$. Therefore, $\begin{bmatrix} T \end{bmatrix}_{\beta '} = Q^{-1} \begin{bmatrix} T \end{bmatrix}_\beta Q$.
+\end{sol}
+
 \begin{corollary}{26}
-Let $A \in M_{n \times n}$ and let $\gamma = \{u_1, \dots, u_n\}$ be an ordered basis for $F^n$. Then $\begin{bmatrix} L_A \end{bmatrix}_\gamma = Q^{-1}AQ$ where $Q$ is the matrix with the $j$th column equal to $u_j$. 
+Let $A \in M_{n \times n}(\mathbb{F})$ and let $\gamma = \{u_1, \dots, u_n\}$ be an ordered basis for $F^n$. Then $\begin{bmatrix} L_A \end{bmatrix}_\gamma = Q^{-1}AQ$ where $Q$ is the matrix with the $j$th column equal to $u_j$. 
 \end{corollary}
+
+\noindent\textbf{Note:} We say $B$ \textbf{is similar to} $A$ if there exists an invertible matrix $C$ such that $$B = C^{-1}AC.$$ 
+
+\noindent\textbf{Example:} Let $A = \begin{pmatrix}
+2 & 0 & 0 \\ 1 & 2 & 1 \\ -1 & 0 & 1
+\end{pmatrix}$. Find $A^{100}$.
+
+\textit{Solution.} Let $\gamma = \left\{ \begin{pmatrix}
+0 \\ -1 \\ 1
+\end{pmatrix}, \begin{pmatrix}
+-1 \\ 0 \\ 1
+\end{pmatrix}, \begin{pmatrix}
+0 \\ 1 \\ 0
+\end{pmatrix} \right\}$.
+
+\begin{itemize}
+    \item[(1)] Find $\begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma$. \begin{align*}
+        L_A \left( \begin{pmatrix}
+        0 \\ -1 \\ 1
+        \end{pmatrix} \right) &= A \begin{pmatrix}
+        0 \\ -1 \\ 1
+        \end{pmatrix} = \begin{pmatrix}
+        2 & 0 & 0 \\ 1 & 2 & 1 \\ -1 & 0 & 1
+        \end{pmatrix} \begin{pmatrix}
+        0 \\ 1 \\ -1
+        \end{pmatrix} = \begin{pmatrix}
+        0 \\ -1 \\ 1
+        \end{pmatrix}, \\
+        L_A \left( \begin{pmatrix}
+        -1 \\ 0 \\ 1
+        \end{pmatrix} \right) &= A \begin{pmatrix}
+        -1 \\ 0 \\ 1
+        \end{pmatrix} = \begin{pmatrix}
+        2 & 0 & 0 \\ 1 & 2 & 1 \\ -1 & 0 & 1
+        \end{pmatrix} \begin{pmatrix}
+        -1 \\ 0 \\ 1
+        \end{pmatrix} = \begin{pmatrix}
+        -2 \\ 0 \\ 2
+        \end{pmatrix}, \\
+        L_A \left( \begin{pmatrix}
+        0 \\ 1 \\ 0
+        \end{pmatrix} \right) &= A \begin{pmatrix}
+        0 \\ 1 \\ 0
+        \end{pmatrix} = \begin{pmatrix}
+        2 & 0 & 0 \\ 1 & 2 & 1 \\ -1 & 0 & 1
+        \end{pmatrix} \begin{pmatrix}
+        0 \\ 1 \\ 0
+        \end{pmatrix} = \begin{pmatrix}
+        0 \\ 2 \\ 0
+        \end{pmatrix}.
+    \end{align*} Thus $$\begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma = \begin{pmatrix}
+    1 & 0 & 0 \\ 0 & 2 & 0 \\ 0 & 0 & 2
+    \end{pmatrix}.$$
+    
+    \item[(2)] Note, $Q = \begin{pmatrix}
+    0 & -1 & 0 \\ -1 & 0 & 1 \\ 1 & 1 & 0
+    \end{pmatrix}$ and $Q^{-1} = \begin{pmatrix}
+    1 & 0 & 1 \\ -1 & 0 & 0 \\ 1 & 1 & 1
+    \end{pmatrix}$. Then $\begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma = Q^{-1}AQ$. So, $A = Q \begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma Q^{-1}$. Then we have \begin{align*}
+        A^{100} &= \left( Q \begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma Q^{-1} \right)^{100} \\
+    &= Q \begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma Q^{-1} Q \begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma Q^{-1} \dots Q \begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma Q^{-1} \\
+    &= Q \begin{bmatrix}
+    L_A
+    \end{bmatrix}_\gamma^{100} Q^{-1} \\
+    &= Q \begin{pmatrix}
+    1^{100} & 0 & 0 \\ 0 & 2^{100} & 0 \\ 0 & 0 & 2^{100}
+    \end{pmatrix} Q^{-1}.
+    \end{align*}
+\end{itemize}
 
 \subsection{Dual spaces}
 
@@ -1171,7 +1384,10 @@ $$dim(V^*) = dim(V)$$
 \noindent Let $\beta = \{x_1, \dots, x_n\}$ for $v \in V$ let $\begin{bmatrix} v \end{bmatrix}_\beta = (a_1, \dots, a_n)^T$. Define $$f_i(v) = a_i.$$
 
 \begin{theorem}{2.24}
-Let $V$ be a finite-dimensional vector space with ordered basis $\beta = \{x_1, \dots, x_n\}$ and let $\beta^* = \{f_1, \dots, f_n\}$. Then $\beta^*$ is an ordered basis for $V^*$ and for $f \in V^*$ where $$f = \sum f(x_i)f_i.$$
+Let $V$ be a finite-dimensional vector space with ordered basis $\beta = \{x_1, \dots, x_n\}$ and let $\beta^* = \{f_1, \dots, f_n\}$. Then $\beta^*$ is an ordered basis for $V^*$ and for $f \in V^*$ where $$f = \sum_{i = 1}^n f(x_i)f_i.$$ Note, $f_i : V \to \mathbb{F}$ is defined as $f_i(x_j) = \delta_{ij} = \begin{cases} 
+            1 &\text{if } i=j, \\
+            0 &\text{else}
+        \end{cases}.$
 \end{theorem}
 
 \begin{sol}
